fix dark mode and image errors

--- a/styles/Show.module.scss
+++ b/styles/Show.module.scss
@@ -14,9 +14,15 @@
     color: yellow
   }
 
+}
+
+.imgContainer {
+  position: relative;
+  height: 240px;
+
   img {
     width: 100%;
-    object-fit: cover;
+    object-fit: contain;
     object-position: top;
   }
 }
@@ -42,12 +48,12 @@
     font-family: sans-serif;
     border-radius: 10px;
   }
-  
+
   label {
     margin-top: 10px;
     font-size: 16px;
   }
-  
+
   input {
     padding: 10px;
     margin-top: 5px;
@@ -57,11 +63,11 @@
     background-color: #444444;
     color: #fff;
   }
-  
+
   input[type="file"] {
     margin-top: 10px;
   }
-  
+
   input:focus {
     outline: none;
     box-shadow: 0px 0px 5px 1px #7c7c7c;
